# modern-ml

./: .gitignore  README.md  pyproject.toml
case/instructions/: case_overview.md
case/notebooks/: first_look.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.22fe8a61-bba748f7-eff1b57b-9b87bfe0.tmp  cat_feature_index.983c5c37-f74f8d13-afcbc3af-68c0db5a.tmp
global_code/: util.py
instructions/: env_configuration.md
week_1/challange/: challange.md
week_1/diagrams/: 1_split_and_churn_definition.excalidraw
week_1/documents/: references.md
week_1/model/: baseline_model.joblib  best_params.json  best_params_fixed.json  feat_selection_model.joblib  selected_features_list.json  tunned_model.joblib
week_1/notebooks/: 1_dataset_first_look.ipynb  2_define_churn.ipynb  3_feature_engineering.ipynb  4_sample_date_split.ipynb  5_feature_selection.ipynb  5_train_the_model.ipynb  6_tuning.ipynb  6_tunning.ipynb  7_calibration.ipynb
week_1/prompts/: 6_generate_train_notebook.md
week_1/scripts/: download_raw_kaggle_churn_datasets.py
week_1/src/: config.py  extract.py  main.py
